--- a/project-tourists/pom.xml
+++ b/project-tourists/pom.xml
@@ -15,6 +15,11 @@
       <version>6.0</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>2.8.0</version>
+    </dependency>
   </dependencies>
 
   <build>
