User,QuizPerformance and Main user webpage

--- a/project-tourists/src/main/webapp/WEB-INF/web.xml
+++ b/project-tourists/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,13 @@
     <listener-class>javaFiles.MainContextListener</listener-class>
   </listener>
 
+  <servlet>
+    <servlet-name>AnotherUser</servlet-name>
+    <servlet-class>javaFiles.AnotherUserServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>AnotherUser</servlet-name>
+    <url-pattern>/AnotherUser</url-pattern>
+  </servlet-mapping>
 </web-app>
