--- a/project-tourists/pom.xml
+++ b/project-tourists/pom.xml
@@ -26,6 +26,12 @@
       <artifactId>commons-dbcp2</artifactId>
       <version>2.8.0</version>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>3.8.1</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
