--- a/project-tourists/pom.xml
+++ b/project-tourists/pom.xml
@@ -32,6 +32,11 @@
           <version>3.8.1</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
   </dependencies>
 
   <build>
