--- a/project-tourists/src/main/webapp/WEB-INF/web.xml
+++ b/project-tourists/src/main/webapp/WEB-INF/web.xml
@@ -48,4 +48,20 @@
     <servlet-name>AnotherUser</servlet-name>
     <url-pattern>/AnotherUser</url-pattern>
   </servlet-mapping>
+
+  <error-page>
+    <error-code>404</error-code>
+    <location>/errorpage.jsp</location>
+  </error-page>
+
+  <error-page>
+    <error-code>500</error-code>
+    <location>/errorpage.jsp</location>
+  </error-page>
+
+  <error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/errorpage.jsp</location>
+  </error-page>
+
 </web-app>
